fix: panel-control z-index

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -5,7 +5,7 @@
 .map {
     width: 100%;
     height: 65vh;
-    z-index: 1;
+    
 }
 
 .map img {
@@ -13,4 +13,7 @@
     height: 40px;
     
 }
-
+.leaflet-top {
+   
+   z-index: 392039120;
+}
